feat: add email account platform
